--- a/app/features/home/home.mdl.listaPacotes.html
+++ b/app/features/home/home.mdl.listaPacotes.html
@@ -9,7 +9,7 @@
     <md-dialog-content>    
       <div class="md-dialog-content" layout='column'>
           <md-card layout='row' layout-align="center center">
-              <form name="projectForm" ng-submit="vm.consultaPacote(consulta.input);consulta.input=''" method="POST" layout-padding>
+              <form name="projectForm" ng-submit="consultaPacote(consulta.input);consulta.input=''" method="POST" layout-padding>
                   <md-input-container class="md-block" flex>
                       <label>LEITOR</label>
                       <input id="leitor" required md-no-asterisk name="description" ng-model="consulta.input"  focus-me="focusInput">
