--- a/app/features/home/home.mdl.demonstrativo.html
+++ b/app/features/home/home.mdl.demonstrativo.html
@@ -8,8 +8,30 @@
     </md-toolbar> -->
     <md-dialog-content>
       <div class="md-dialog-content" layout='column'>
+        <md-card layout="row" flex='20'>
+          <!-- conteúdo inferior -->
+          <form name="projectForm" layout layout-margin ng-submit="vm.consultaPacote(consulta.input);consulta.input=''"
+            method="POST">
+            <div layout layout-align="center end" flex>
+              <md-input-container flex>
+                <label>LEITOR</label>
+                <input id="leitor" required md-no-asterisk name="description" ng-model="consulta.input"
+                  focus-me="focusInput">
+                <div ng-messages="projectForm.description.$error">
+                </div>
+              </md-input-container>
+            </div>
+            <div layout layout-align="center end" flex>
+              <md-input-container flex>
+                <label>OPERADOR</label>
+                <input ng-model="vm.servico.operador.NOME" readonly="readonly">
+              </md-input-container>
+              <input type='submit' class="hide" />
+            </div>
+          </form>
+        </md-card>
         <md-card layout='row' flex>
-          <div layout="column" flex='80'>
+          <div layout="column" flex>
             <md-table-container>
               <table md-table md-row-select ng-model="selected" md-progress="promise">
                 <thead md-head md-order="query.order" md-on-reorder="getDesserts">
@@ -17,34 +39,30 @@
                     <th md-column md-order-by="IDPRODUTO"><span>ID</span></th>
                     <th md-column md-numeric>QTD / UN</th>
                     <th md-column colspan="4" md-order-by="DESCRICAO"><span>Descrição</span></th>
-
-                    <!-- <th md-column>Comentarios</th> -->
+                    <th md-column><span>codbar</span></th>
+                    <th md-column>IMPRESSÃO</th> 
+                    <td md-column></td> 
                   </tr>
                 </thead>
                 <tbody md-body>
-                  <tr md-row md-select="dessert" md-select-id="name" md-auto-select
-                    ng-repeat="dessert in desserts.data">
+                  <tr md-row md-select="dessert" md-select-id="name" md-auto-select md-on-select="logItem"
+                    ng-disabled="selecionado" ng-repeat="dessert in desserts.data">
                     <td md-cell>{{dessert.CODPRO}}</td>
-                    <td md-cell>{{dessert.QTD | number: 1}} {{dessert.UNIDADE}}</td>
+                    <td md-cell>{{dessert.QTD}} emb. c/ {{dessert.MULT_QTD}} {{dessert.UNIDADE}}</td>
                     <td md-cell colspan="4">{{dessert.DESCRICAO}}</td>
-                    <!-- <td md-cell ng-click="editComment($event, dessert)" ng-class="{'md-placeholder': !dessert.comment}">
-                    {{dessert.comment || 'Add a comment'}}
-                  </td> -->
+                    <td md-cell>{{dessert.CODBAR}}</td>
+                    <td md-cell ng-click="editComment($event, dessert)" ng-class="{'md-placeholder': !dessert.comment}">
+                      {{dessert.comment || '  QUANTIDADE'}}
+                    </td>
+                    <td><md-button ng-click="imprimeCodbar(dessert)">IMPRIMIR</md-button></td>
                   </tr>
                 </tbody>
               </table>
             </md-table-container>
           </div>
-          <div layout="column" flex='20'>
-            <md-input-container>
-              <label>Novo Valor</label>
-              <input type="number"  ng-model="produto.VALOR.valor" md-autofocus>
-            </md-input-container>
-            <md-button class="md-raised md-primary">IMPRIMIR</md-button>
-          </div>
         </md-card>
-        <md-card layout="row" flex layout-fill layout-align="center center">
-          <img  src='./{{selected[0].CODPRO}}.jpg'>
+        <md-card layout="row" flex='60' layout-align="center bottom">
+          <img src='./{{selected[0].CODPRO}}.jpg' flex>
         </md-card>
     </md-dialog-content>
   </form>
