--- a/app/features/home/home.html
+++ b/app/features/home/home.html
@@ -1,4 +1,4 @@
-<section ng-cloak layout="column" layout-fill>
+<section ng-cloak layout="column" layout-fill keyboard="vm.keys">
     <md-content layout layout-align="space-between center" flex="18">
         <!-- conteudo superior -->
         <!-- <md-button ng-click="vm.modalDemonstrativo()">testeDemo</md-button>
