--- a/app/features/home/home.html
+++ b/app/features/home/home.html
@@ -75,7 +75,7 @@
             <div layout layout-align="center end" flex>
                 <md-input-container flex>
                     <label>LEITOR</label>
-                    <input id="leitor" required md-no-asterisk name="description" ng-model="consulta.input"
+                    <input id="leitor" autofocus required md-no-asterisk name="description" ng-model="consulta.input"
                         focus-me="focusInput">
                     <div ng-messages="projectForm.description.$error">
                     </div>
